Report: Fix issue #26 and #21.
Completely recode the pagination system. Intruduce new bugs:
  - When the page contains a scrollbar, the pagination bar is a few
	pixels more on the left;
  - When we scroll down, the pagination bar disapears.

--- a/www/css/dynamic.css
+++ b/www/css/dynamic.css
@@ -187,12 +187,12 @@ thead .source {
  * Pagination bar
  ******************************************************************************/
 #pagination_bar_root {
-    position: fixed;
+    /*position: fixed;
     top: 10px;
-    right: 0px;
+    right: 0px;*/
 }
 
-#pagination_bar_root li:first-child {
+/*#pagination_bar_root li:first-child {
     position: fixed;
     right: 11.5em;
-}
+}*/
